_sass/jekyll-alternative-minimal.scss
@import "fonts";
@import "rouge-github";

* {
  box-sizing: border-box;
}

html {
}

body {
  background-color: #fff;
  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color:#727272;
  font-weight:400;
  margin: 0;
  width: 100%
}

h1, h2, h3, h4, h5, h6 {
  color:#222;
  margin:0px 0px 20px 0px;
}

p, ul, ol, table, pre, dl {
  margin:0 0 20px;
  color:#444;
}

h1, h2, h3 {
  line-height:1.1;
}

h1 {
  font-size:28px;
}

h1 a{
  color:#393939;
}

h1 a:hover{
  color:#bbbbbb;
}

h2 {
  color:#393939;
}

h2 a{
  color:#393939;

}

h2 a:hover{
  color:#bbbbbb;
}

.category{
  font-weight: normal;
}

.active {
  // text-decoration: underline;
  font-weight: bold;
}

h3, h4, h5, h6 {
  color:#494949;
}

a {
  color:#267CB9;
  text-decoration:none;
}

a:hover, a:focus {
  color:#069;
}

a > i {
  font-size:36px;
  color:#222;
}

a > i:hover {
  color:#bbbbbb;  
}

a:hover, a:focus {
  color:#069;
}

a small {
  font-size:11px;
  color:#777;
  margin-top:-0.3em;
  display:block;
}

a:hover small {
  color:#777;
}

.grid-container {
  max-width: 930px;
  min-height: calc(100vh - 60px);
  display: grid;
  grid-template-areas: 
    "sidebar feed" 
    "footer footer";
  grid-template-rows: auto 3em;
  grid-template-columns: 1fr 3fr;
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  padding-top: 2em;
  margin-left: auto;
  margin-right: auto;

}

.grid-container > * {
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.sidebar {
  grid-area: sidebar;
  min-width: 200px;
}

.content {
  grid-area: feed;
  max-width: calc(100vw - 230px);
}

.footer {
  grid-area: footer;
  max-width: 100vw;
  text-align: center;
}

.content-tab {
  
}

blockquote {
  border-left:1px solid #e5e5e5;
  margin:0;
  padding:0 0 0 20px;
  font-style:italic;
}

code, pre {
  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
  color:#333;
}

pre {
  padding:8px 15px;
  background: #f8f8f8;
  border-radius:5px;
  border:1px solid #e5e5e5;
  overflow-x: auto;
}

table {
  width:100%;
  border-collapse:collapse;
}

th, td {
  text-align:left;
  padding:5px 10px;
  border-bottom:1px solid #e5e5e5;
}

dt {
  color:#444;
  font-weight:700;
}

th {
  color:#444;
}

img {
  max-width:100%;
}

p > img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

header {
  text-align: center;
}

header > .image_wrapper {
  /*width: 70%;*/
  margin: 0 auto;
}

.profile-pic {
  border-radius: 50%;
  margin: 0 auto;
  max-height: 150px;
}

.description {
  margin-top: 1em;
  text-align: center;
}

#notebook {
  // max-width: 100%;
  // width: 90vw;
}

strong {
  color:#222;
  font-weight:700;
}

header > .icons {
  text-align: center;
  margin: 0 auto;
  color:#222;
  padding-bottom:2em;
  padding-top:1em;
  display: flex;
  justify-content: center;
}

header > .icons a {
  color:#222;
}

header > .icons a:hover {
  color:#bbbbbb;  
}

header i {
  font-size: 38px;
  padding: 0px 8px 0px 8px
}


ul.downloads {}

.downloads li {}

.downloads li:first-child a {}

.downloads li:last-child a {}

.downloads a {}

.downloads a:hover, .downloads a:focus {}

.downloads ul a:active {}

.downloads li + li + li {}

.downloads a strong {}

section {}

small {}

hr {}

footer {}


@media print, screen and (max-width: 700px) {
  body {
    word-wrap: break-word;
  }

  header > h1 {
    width: 70%;
    margin-left:  auto;
    margin-right: auto;
  }

  header > p{
    text-align: center;
    width: 70%;
    margin: 0 auto;
  }

  header > .image_wrapper {
    // text-align: center;
    max-height: 200px;
    width: 50%;
    margin: 0 auto;
  }

  .grid-container {
    display: grid;
    grid-template-areas: 
      "sidebar"
      "feed" 
      "footer";
    grid-template-rows: auto auto auto;
    grid-template-columns: auto;
    grid-column-gap: 10px;
    grid-row-gap: 20px;
    align-content: start;
    max-width: 100vw;
    margin-left: auto;
    margin-right: auto;
  }

  .content {
    max-width: 100vw;
    margin: 0 auto;
  }
}

@media print {}

